[Fix] Icon problem on firefox

--- a/core/iconfont/template.less
+++ b/core/iconfont/template.less
@@ -8,15 +8,14 @@
 
 @font-face {
     font-family: "<%= fontName %>";
-    src: url('@{icon-font-path}<%= fontName %>.eot');
-    src: url('@{icon-font-path}<%= fontName %>.eot?#iefix') format('eot'),
-    url('@{icon-font-path}<%= fontName %>.woff') format('woff'),
-    url('@{icon-font-path}<%= fontName %>.ttf') format('truetype'),
-    url('@{icon-font-path}<%= fontName %>.svg#<%= fontName %>') format('svg');
+    src: url('@{icon-path}<%= fontName %>.eot');
+    src: url('@{icon-path}<%= fontName %>.woff') format('woff'),
+    url('@{icon-path}<%= fontName %>.ttf') format('truetype'),
+    url('@{icon-path}<%= fontName %>.svg#<%= fontName %>') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-.icon:before {
+.icon::before {
     font-family: "<%= fontName %>";
 }
 
@@ -31,7 +30,7 @@
 //
 // Styleguide 5.4
 <% _.each(glyphs, function(glyph) { %>.icon-<%= glyph.name %> {
-    &:before {content: "\<%= glyph.codepoint.toString(16).toUpperCase() %>";}
+    &::before {content: "\<%= glyph.codepoint.toString(16).toUpperCase() %>";}
     &:extend(.icon all);
 }
 <% }); %>
