--- a/core/less/common/controls.less
+++ b/core/less/common/controls.less
@@ -21,11 +21,11 @@
         border-color: @soil;
     }
     &.active {
-        &:after {
+        &::after {
             position: absolute;
             top: 1px;
             left: 1px;
-            &:extend(.icon-tick all);
+            &:extend(.icon-tick::before all);
             content: "\e62f";
         }
     }
@@ -34,7 +34,7 @@
 .checkbox {
     &:extend(.checkradiobox all);
     border-radius: @border-radius-small;
-    &.active:after {
+    &.active::after {
         border-radius: 1px;
     }
 }
