--- a/core/less/icons/icon-compiled.less
+++ b/core/less/icons/icon-compiled.less
@@ -8,15 +8,14 @@
 
 @font-face {
     font-family: "evfdm-icon";
-    src: url('@{icon-font-path}evfdm-icon.eot');
-    src: url('@{icon-font-path}evfdm-icon.eot?#iefix') format('eot'),
-    url('@{icon-font-path}evfdm-icon.woff') format('woff'),
-    url('@{icon-font-path}evfdm-icon.ttf') format('truetype'),
-    url('@{icon-font-path}evfdm-icon.svg#evfdm-icon') format('svg');
+    src: url('@{icon-path}evfdm-icon.eot');
+    src: url('@{icon-path}evfdm-icon.woff') format('woff'),
+    url('@{icon-path}evfdm-icon.ttf') format('truetype'),
+    url('@{icon-path}evfdm-icon.svg#evfdm-icon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-.icon:before {
+.icon::before {
     font-family: "evfdm-icon";
 }
 
@@ -67,150 +66,150 @@
 //
 // Styleguide 5.4
 .icon-arrow-down {
-    &:before {content: "\E001";}
+    &::before {content: "\E001";}
     &:extend(.icon all);
 }
 .icon-arrow-left {
-    &:before {content: "\E002";}
+    &::before {content: "\E002";}
     &:extend(.icon all);
 }
 .icon-arrow-right {
-    &:before {content: "\E003";}
+    &::before {content: "\E003";}
     &:extend(.icon all);
 }
 .icon-arrow-up {
-    &:before {content: "\E004";}
+    &::before {content: "\E004";}
     &:extend(.icon all);
 }
 .icon-article {
-    &:before {content: "\E005";}
+    &::before {content: "\E005";}
     &:extend(.icon all);
 }
 .icon-attached {
-    &:before {content: "\E006";}
+    &::before {content: "\E006";}
     &:extend(.icon all);
 }
 .icon-bin {
-    &:before {content: "\E007";}
+    &::before {content: "\E007";}
     &:extend(.icon all);
 }
 .icon-calendar {
-    &:before {content: "\E008";}
+    &::before {content: "\E008";}
     &:extend(.icon all);
 }
 .icon-camera {
-    &:before {content: "\E009";}
+    &::before {content: "\E009";}
     &:extend(.icon all);
 }
 .icon-clock {
-    &:before {content: "\E00A";}
+    &::before {content: "\E00A";}
     &:extend(.icon all);
 }
 .icon-create {
-    &:before {content: "\E00B";}
+    &::before {content: "\E00B";}
     &:extend(.icon all);
 }
 .icon-cross {
-    &:before {content: "\E00C";}
+    &::before {content: "\E00C";}
     &:extend(.icon all);
 }
 .icon-discussions {
-    &:before {content: "\E00D";}
+    &::before {content: "\E00D";}
     &:extend(.icon all);
 }
 .icon-display-hierarchical {
-    &:before {content: "\E00E";}
+    &::before {content: "\E00E";}
     &:extend(.icon all);
 }
 .icon-download {
-    &:before {content: "\E00F";}
+    &::before {content: "\E00F";}
     &:extend(.icon all);
 }
 .icon-edit {
-    &:before {content: "\E010";}
+    &::before {content: "\E010";}
     &:extend(.icon all);
 }
 .icon-eye {
-    &:before {content: "\E011";}
+    &::before {content: "\E011";}
     &:extend(.icon all);
 }
 .icon-filter {
-    &:before {content: "\E012";}
+    &::before {content: "\E012";}
     &:extend(.icon all);
 }
 .icon-fold {
-    &:before {content: "\E013";}
+    &::before {content: "\E013";}
     &:extend(.icon all);
 }
 .icon-handle {
-    &:before {content: "\E014";}
+    &::before {content: "\E014";}
     &:extend(.icon all);
 }
 .icon-help {
-    &:before {content: "\E015";}
+    &::before {content: "\E015";}
     &:extend(.icon all);
 }
 .icon-home {
-    &:before {content: "\E016";}
+    &::before {content: "\E016";}
     &:extend(.icon all);
 }
 .icon-infos {
-    &:before {content: "\E017";}
+    &::before {content: "\E017";}
     &:extend(.icon all);
 }
 .icon-mail {
-    &:before {content: "\E018";}
+    &::before {content: "\E018";}
     &:extend(.icon all);
 }
 .icon-note {
-    &:before {content: "\E019";}
+    &::before {content: "\E019";}
     &:extend(.icon all);
 }
 .icon-read {
-    &:before {content: "\E01A";}
+    &::before {content: "\E01A";}
     &:extend(.icon all);
 }
 .icon-search {
-    &:before {content: "\E01B";}
+    &::before {content: "\E01B";}
     &:extend(.icon all);
 }
 .icon-settings {
-    &:before {content: "\E01C";}
+    &::before {content: "\E01C";}
     &:extend(.icon all);
 }
 .icon-star-empty {
-    &:before {content: "\E01D";}
+    &::before {content: "\E01D";}
     &:extend(.icon all);
 }
 .icon-star-mid {
-    &:before {content: "\E01E";}
+    &::before {content: "\E01E";}
     &:extend(.icon all);
 }
 .icon-star {
-    &:before {content: "\E01F";}
+    &::before {content: "\E01F";}
     &:extend(.icon all);
 }
 .icon-stats {
-    &:before {content: "\E020";}
+    &::before {content: "\E020";}
     &:extend(.icon all);
 }
 .icon-tick {
-    &:before {content: "\E021";}
+    &::before {content: "\E021";}
     &:extend(.icon all);
 }
 .icon-triangle {
-    &:before {content: "\E022";}
+    &::before {content: "\E022";}
     &:extend(.icon all);
 }
 .icon-unfold {
-    &:before {content: "\E023";}
+    &::before {content: "\E023";}
     &:extend(.icon all);
 }
 .icon-users {
-    &:before {content: "\E024";}
+    &::before {content: "\E024";}
     &:extend(.icon all);
 }
 .icon-warning {
-    &:before {content: "\E025";}
+    &::before {content: "\E025";}
     &:extend(.icon all);
 }
