--- a/core/less/icons/icon-generic.less
+++ b/core/less/icons/icon-generic.less
@@ -15,7 +15,7 @@
 .icon {
 	line-height: 1px;
 	display: inline-block;
-	&:before {
+	&::before {
 		// NB: this class is extended by all the icons.
 		display: inline-block;
 		font-style: normal;
@@ -62,13 +62,13 @@
 	// <i class="icon-triangle {$modifiers}"></i>
 	//
 	// Styleguide 5.2
-	&.icon-quarter-turn:before {
+	&.icon-quarter-turn::before {
 		transform: rotate(0.25turn);
 	}
-	&.icon-half-turn:before {
+	&.icon-half-turn::before {
 		transform: rotate(0.5turn);
 	}
-	&.icon-minus-quarter-turn:before {
+	&.icon-minus-quarter-turn::before {
 		transform: rotate(-0.25turn);
 	}
 
@@ -87,10 +87,10 @@
 	    from {transform:rotate(0turn);}
 	    to {transform:rotate(1turn);}
 	}
-	&.icon-spin:before {
+	&.icon-spin::before {
 		animation: evspin @icon-spinning-period infinite linear;
 	}
-	&.icon-transition:before {
+	&.icon-transition::before {
 		transition: transform @icon-transition-delay;
 	}
 }
