--- a/core/less/icons/variables.less
+++ b/core/less/icons/variables.less
@@ -6,7 +6,7 @@
     Path
     ----
 */
-	@icon-font-path: "../fonts/iconfont/";
+	@icon-path: "../fonts/iconfont/";
 
 /*
     Animation
